hphp/test/zend/good/ext/standard/tests/serialize/bug65806.php.expectf

Fatal error: Uncaught exception 'InvalidOperationException' with message 'ArrayIterator to array cast' in %s/bug65806.php:4
Stack trace:
%A
